--- a/PressPracticeCSS-Episodes.css
+++ b/PressPracticeCSS-Episodes.css
@@ -50,7 +50,7 @@
 	.epics{
 		background-color:blue;
 		text-align:center;
-		background-image:url("psp-images/EpisodePic.png");
+		background-image:url("psp-images/EpisodePic.PNG");
 		background-size:100%;
 		width:95%;
 		height:100%;
