--- a/PressPracticeCSS.css
+++ b/PressPracticeCSS.css
@@ -16,17 +16,19 @@
 }
 
 @media only screen and (min-width: 50px){
-	.wrapper{
-		padding-top:50px;
-	}
-	
+
 	.content {
-		grid-row:row 1 / span 5;	
+		grid-column: col 2 /span 15;
+		grid-row:row 1 / span 6;
 	}
 
+	.wrapper{
+		padding-top:0;
+		grid-template-rows: repeat(8, [row] 100px);
+	}	
 	.navbarBottom{
-		grid-column: col 1 / span 2;
-		grid-row:row 6 / span 5;
+		grid-column: col 1 / span 1;
+		grid-row:row 1 / span 6;
 	}
 
 	.navbarBottom li a{
@@ -38,15 +40,11 @@
 	}
 
 	.clone{
-		width:25%;
-		height:25%;
-
-		padding: 0%;
-		border-radius:50%;
-		background-color:rgba(0,0,0,0);
-
+		position:absolute;
+		width:15%;
+		height:15%;
+		top:30%;	
 	}
-
 	.backButton{
 		position: absolute;
 		right:5%;
@@ -56,6 +54,12 @@
 	.navbar{
 		display:none;
 	}
+
+	.featured{
+		grid-row: row 7/ span 2;
+	}	
+	
+
 }
 
 @media only screen and (min-width: 650px){
@@ -66,16 +70,16 @@
 
 	.content {
 		grid-column: col 4 /span 15;
-		grid-row:row 1 / span 5;
+		grid-row:row 1 / span 6;
 	}
 	
 	.featured{
-		grid-row: row 6/ span 2;
+		grid-row: row 7/ span 2;
 	}	
 	
 	.extras{
 		grid-column: col 9/ span 10;
-		grid-row: row 6/ span 2;
+		grid-row: row 7/ span 2;
 	}
 	
 	.promoRight{
@@ -98,13 +102,9 @@
 		left:25%;
 	}
 
-	.footer {
-		grid-row:row 8 / span 1;
-	}
-
 	.navbarBottom{
 		grid-column: col 3 /span 1;
-		grid-row:row 1 / span 5;
+		grid-row:row 1 / span 6;
 		border-bottom:hidden;
 		border-right:1px inset gold;
 	}
@@ -152,7 +152,6 @@
 		grid-template-columns: repeat(10,[col] auto);
 	}	
 
-
 	.content {
 		grid-column: col 2 /span 8;
 		grid-row:row 1 / span 4;
@@ -170,10 +169,6 @@
 
 	.promoPhrase{
 		left:25%;
-	}
-
-	.footer {
-		grid-column: col 1 / span 10;
 	}
 
 	.navbar li{
